<resources>
    <string name="app_name">Psycho Cactus</string>
    <string name="mainTitleTag">My Math Game</string>
    <string name="highScoresButtonTag">High Scores</string>
    <string name="quitButtonTag">Quit</string>
    <string name="playButtonTag">Play</string>
    <string name="mainImageDescTag">Main Image</string>
    <string name="equalSign">=</string>
    <string name="zero_number">0</string>
    <string name="operator">*</string>
    <string name="text_score">Score: 0</string>
    <string name="text_level">Level: 1</string>
    <string name="title_activity_game">Multiply Level</string>
    <string name="game_canvas_description">Game Canvas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause_dialog_title">Game Paused</string>
    <string name="pause_dialog_message">Game is paused, take your time.</string>
    <string name="resume">RESUME</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUSE</string>
    <string name="start">START</string>
    <string name="hello_world">Hello, world!</string>
</resources>
